--- a/desserts.html
+++ b/desserts.html
@@ -117,5 +117,35 @@
             </tbody>
         </table>
     </div>
+
+    <h2 class="text-center">Button Groups for Letters</h2>    
+    <div class="btn-toolbar justify-content-center" role="toolbar">
+        
+        <div class="btn-group me-2" role="group">
+            <button type="button" class="btn btn-success">L</button>
+            <button type="button" class="btn btn-success">A</button>
+            <button type="button" class="btn btn-success">M</button>
+        </div>
+
+        <div class="btn-group me-2" role="group">
+            <button type="button" class="btn btn-warning">H</button>
+            <button type="button" class="btn btn-warning">O</button>
+        </div>
+
+        <div class="btn-group" role="group">
+            <button type="button" class="btn btn-danger">N</button>
+        </div>
+    </div>
+
+    <div class="dropdown"></div>
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown">
+            Select a page to go to!
+        </button>
+
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="basic.html">Basic!</a>
+            <a class="dropdown-item" href="advanced.html">Advanced!</a>
+        </div>
+    </div>
 </body>
 </html>
