--- a/desserts.html
+++ b/desserts.html
@@ -30,8 +30,27 @@
     </style>
 </head>
 <body>
-    <h1>After dinner hosted by Braeden Lhamon</h1>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="desserts.html">Dessert options</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="basic.html">Basic!</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="advanced.html">Advanced!</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <hr>
 
+    <h1>After dinner hosted by Braeden Lhamon</h1>
     <div class="flex-container"></div>
         <div class="row">
             <div class="col-sm-2">L</div>
